--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,6 +15,7 @@ auto-checkout = *
 collective.stripe = git git://github.com/jlantz/collective.stripe.git
 
 [versions]
+requests=2.22.0
 
 [scripts]
 recipe = zc.recipe.egg
